# gbfs-audit-catalogue

./: .gitignore  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  manuscript.tex  pyproject.toml  references.bib  requirements-experiments.txt  requirements.txt  streamlit_app.py
.github/workflows/: tests.yml
app/: streamlit_app.py
audit_pipeline/: core.py
catalogue/metadata/: croissant.jsonld  datapackage.json  dcat-ap.jsonld  schema.json
docs/: index.md
docs/assets/css/: style.scss
experiments/: README.md  __init__.py  run_all.py
experiments/annotation/: PROTOCOL.md  __init__.py  annotator_app.py  compute_reliability.py  sample_200.csv  sample_extractor.py  storage.py
experiments/config/: __init__.py  defaults.yaml
experiments/e1_holdout/: PROTOCOL.md  held_out_analysis.md  held_out_panel.csv  held_out_results.csv  systems_2025-11-11.csv
experiments/e2_threshold_sensitivity/: a4_sigma_sweep.csv
experiments/e5_europe/: panel.csv  results.csv
experiments/xp1_dynamic_audit/: collector.py  detector.py  run_xp1.py
experiments/xp2_spatial_topology/: ablation.py  anomaly_detector.py  run_xp2.py
experiments/xp3_looo_validation/: protocol.py  run_xp3.py
huggingface/: dataset_card.md
notebooks/: xp_reviewer_demo.ipynb
paper/: COVER_LETTER.md  OVERLEAF.md  manuscript.tex  references.bib  sync_overleaf.sh
scripts/: a4_sigma_sensitivity.py  audit_live_systems.py  e1_analyze.py  generate_metadata.py  make_fig_a3_kde.py  setup_fedora_latex.sh
sources/: papers_20260514_135246_doi_lookup_bibliography.md
tests/: conftest.py  test_core.py  test_xp1_detector.py  test_xp3_looo.py
